--- a/WEB/package.json
+++ b/WEB/package.json
@@ -24,6 +24,8 @@
     "angular2-image-upload": "^1.0.0-rc.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-bootstrap": "^3.2.0",
+    "ngx-editor": "^4.1.0",
     "ngx-image-cropper": "^1.3.8",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
