--- a/WEB/package.json
+++ b/WEB/package.json
@@ -26,6 +26,7 @@
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^3.2.0",
     "ngx-editor": "^4.1.0",
+    "ngx-embed-video": "^1.0.4",
     "ngx-image-cropper": "^1.3.8",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
