changes for product activation and license

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 school.date.zoneid=UTC
 
 ## EazDineApp Properties
-school.jwtSecret=SchoolSecretKey
+school.jwtSecret=[B@ba4d54
 school.jwtExpirationInMs=604800000
 
 
