changes for file encryption and login with license creation

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8081
 spring.datasource.url=jdbc:h2:file:~/h2/school_dev;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password =
@@ -18,7 +19,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 school.date.zoneid=UTC
 
 ## EazDineApp Properties
-school.jwtSecret=[B@ba4d54
+school.jwtSecret=demoKey
 school.jwtExpirationInMs=604800000
 
 
