--- a/FILE_ENCRYPTION/pom.xml
+++ b/FILE_ENCRYPTION/pom.xml
@@ -2,20 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.logicq.license</groupId>
-	<artifactId>license</artifactId>
+	<groupId>com.logicq.encryption</groupId>
+	<artifactId>encryption</artifactId>
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
-	<name>license</name>
+	<name>encryption</name>
 
-	<description>LogicQ project for School license builder</description>
-
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.9.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
+	<description>LogicQ project for School file encryption builder</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,15 +31,5 @@
 		</dependency>
 
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
-
 
 </project>
