--- a/LICENSE_BUILDER/API/src/main/resources/application.properties
+++ b/LICENSE_BUILDER/API/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.profiles.active=dev
+spring.profiles.active=dev
 server.port=8080
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/SCHOOL_LICENSE?useSSL=false&serverTimezone=UTC
 #spring.datasource.url = jdbc:mysql://101.53.144.190:3306/wohooinc_eazdine_prod?useSSL=false
