--- a/LICENSE_BUILDER/API/pom.xml
+++ b/LICENSE_BUILDER/API/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.logicq.license</groupId>
 	<artifactId>license</artifactId>
 	<version>0.0.1</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>license</name>
 
 	<description>LogicQ project for School License</description>
