--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-server.port=8081
-spring.datasource.url=jdbc:h2:file:~/h2/school_dev;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password =
-spring.datasource.driverClassName = org.h2.Driver
-spring.jpa.hibernate.ddl-auto = update
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.profiles.active=dev
+#server.port=8081
+#spring.datasource.url=jdbc:h2:file:~/h2/school_dev;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.username=sa
+#spring.datasource.password =
+#spring.datasource.driverClassName = org.h2.Driver
+#spring.jpa.hibernate.ddl-auto = update
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
 
 #Thread Pool
