--- a/LICENSE_BUILDER/API/src/main/resources/application.properties
+++ b/LICENSE_BUILDER/API/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #spring.profiles.active=dev
 server.port=8080
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/SCHOOL_LICENSE?useSSL=false&serverTimezone=UTC
-#spring.datasource.url = jdbc:mysql://101.53.144.190:3306/wohooinc_eazdine_prod?useSSL=false
-spring.datasource.username=root
-spring.datasource.password =
+#spring.datasource.url = jdbc:mysql://127.0.0.1:3306/SCHOOL_LICENSE?useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://101.53.144.190:3306/edusure?useSSL=false
+spring.datasource.username=wohooinc_smartsh
+spring.datasource.password =zN$K1mlaF
 spring.datasource.platform=mysql
 spring.jpa.show-sql=true
 # Keep the connection alive if idle for a long time (needed in production)
@@ -23,12 +23,12 @@ spring.main.allow-bean-definition-overriding=true
 spring.jackson.serialization.fail-on-empty-beans=false
 
 
-#server.contextPath=/license
+server.contextPath=/license
 
 school.date.zoneid=UTC
 
 ## EazDineApp Properties
-school.jwtSecret=demoKey
+school.jwtSecret=edusure
 school.jwtExpirationInMs=604800000
 
 
