--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.profiles.active=dev
-#server.port=8081
-#spring.datasource.url=jdbc:h2:file:~/h2/school_dev;DB_CLOSE_ON_EXIT=FALSE
-#spring.datasource.username=sa
-#spring.datasource.password =
-#spring.datasource.driverClassName = org.h2.Driver
-#spring.jpa.hibernate.ddl-auto = update
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
+#spring.profiles.active=dev
+server.port=8080
+spring.datasource.url=jdbc:h2:file:~/h2/school_dev;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName = org.h2.Driver
+spring.jpa.hibernate.ddl-auto = update
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 
 #Thread Pool
@@ -15,7 +15,7 @@ spring.main.allow-bean-definition-overriding=true
 spring.jackson.serialization.fail-on-empty-beans=false
 
 
-#server.contextPath=/school
+server.contextPath=/school
 
 school.date.zoneid=UTC
 
@@ -37,3 +37,4 @@ spring.servlet.multipart.max-request-size=215MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=./uploads
+school.client.uri=http://101.53.144.190:8080/license/api/school/license/
