changes for license controll

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 server.contextPath=/school
 
 school.date.zoneid=UTC
+schoool.version=001
 
 ## EazDineApp Properties
 school.jwtSecret=demoKey
