--- a/LICENSE_BUILDER/API/src/main/resources/application.properties
+++ b/LICENSE_BUILDER/API/src/main/resources/application.properties
@@ -27,10 +27,12 @@ server.contextPath=/license
 
 school.date.zoneid=UTC
 
+
 ## School App Properties
 school.jwtSecret=edusure
 school.jwtExpirationInMs=604800000
-#school.key=HOSTNAME-PRDOUCT-VALDITY-RANDOM
+license.path=E:\\WORK_SPACE\\SCHOOL_CONTENT\\LICENSE_KEY\\license\\
+
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
