changes for license details

--- a/LICENSE_BUILDER/API/src/main/resources/application.properties
+++ b/LICENSE_BUILDER/API/src/main/resources/application.properties
@@ -31,7 +31,8 @@ school.date.zoneid=UTC
 ## School App Properties
 school.jwtSecret=edusure
 school.jwtExpirationInMs=604800000
-license.path=E:\\WORK_SPACE\\SCHOOL_CONTENT\\LICENSE_KEY\\license\\
+#license.path=E:\\WORK_SPACE\\SCHOOL_CONTENT\\LICENSE_KEY\\license\\
+license.path=/root/root/edusure/license
 
 
 ## MULTIPART (MultipartProperties)
