school project details

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -39,3 +39,4 @@ spring.servlet.multipart.max-request-size=215MB
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=./uploads
 school.client.uri=http://101.53.144.190:8080/license/api/school/license/
+school.client.uri.license=http://101.53.144.190:8080/license/api/school/licenseKey/
