--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.profiles.active=dev
 server.port=8080
 #spring.datasource.url=jdbc:h2:file:~/h2/school_dev;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.url=jdbc:h2:file:~/h2/edusure;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:~/h2/edusure_v1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName = org.h2.Driver
@@ -39,5 +39,5 @@ spring.servlet.multipart.max-request-size=215MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=./uploads
-school.client.uri=http://101.53.144.190:8080/license/api/school/license/
-school.client.uri.license=http://101.53.144.190:8080/license/api/school/licenseKey/
+school.client.uri=http://35.225.43.18:8080/license/api/school/license/
+school.client.uri.license=http://35.225.43.18:8080/license/api/school/licenseKey/
