--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.profiles.active=dev
 server.port=8080
 #spring.datasource.url=jdbc:h2:file:~/h2/school_dev;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.url=jdbc:h2:file:~/h2/edusure_v1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:~/h2/edusure_dv1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName = org.h2.Driver
