--- a/LICENSE_BUILDER/API/src/main/resources/application.properties
+++ b/LICENSE_BUILDER/API/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 #spring.profiles.active=dev
 server.port=8080
-#spring.datasource.url = jdbc:mysql://127.0.0.1:3306/SCHOOL_LICENSE?useSSL=false&serverTimezone=UTC
-spring.datasource.url = jdbc:mysql://101.53.144.190:3306/wohooinc_edusure?useSSL=false
-spring.datasource.username=wohooinc_test
-spring.datasource.password =vnL#iez6l
-spring.datasource.platform=mysql
+spring.datasource.url = jdbc:mysql://35.239.173.138:3306/edusure_license?useSSL=false&serverTimezone=UTC
+#spring.datasource.url = jdbc:mysql://35.226.220.33:3306/eazdine_preprod?useSSL=false&serverTimezone=UTC
+#spring.datasource.url = jdbc:mysql://101.53.144.190:3306/wohooinc_eazdinetest?useSSL=false&serverTimezone=UTC
+#spring.datasource.url = jdbc:mysql://101.53.144.190:3306/wohooinc_eazdine_prod?useSSL=false
+#spring.datasource.username=wohooinc_eazdine
+#spring.datasource.password =1zBSoCAh*
+spring.datasource.username=edusure_license
+spring.datasource.password=Edusure@1234
+spring.datasource.platform=MyISAM
 spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
@@ -13,9 +18,8 @@ spring.jpa.hibernate.ddl-auto = update
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jackson.serialization.fail-on-empty-beans=false
-
 
 #Thread Pool
 school.threadpool.size=10
@@ -32,7 +36,7 @@ school.date.zoneid=UTC
 school.jwtSecret=edusure
 school.jwtExpirationInMs=604800000
 #license.path=E:\\WORK_SPACE\\SCHOOL_CONTENT\\LICENSE_KEY\\license\\
-license.path=/root/root/edusure/license
+license.path=/home/rsa-key-20190515/edusure_key/
 
 
 ## MULTIPART (MultipartProperties)
