changes for school related

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #spring.profiles.active=dev
 server.port=8080
 #spring.datasource.url=jdbc:h2:file:~/h2/school_dev;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.url=jdbc:h2:file:~/h2/edusure_dv1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:~/h2/edusure_demo_v1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.hibernate.ddl-auto = update
-spring.h2.console.enabled=false
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=false
+#spring.h2.console.path=/h2-console
 
 
 #Thread Pool
@@ -22,7 +22,7 @@ school.date.zoneid=UTC
 schoool.version=001
 
 ## EazDineApp Properties
-school.jwtSecret=agsgast6atgq67x7
+school.jwtSecret=fdHe56#da15ertTTy
 school.jwtExpirationInMs=604800000
 
 
@@ -41,3 +41,6 @@ spring.servlet.multipart.max-request-size=215MB
 file.upload-dir=./uploads
 school.client.uri=http://35.225.43.18:8080/license/api/school/license/
 school.client.uri.license=http://35.225.43.18:8080/license/api/school/licenseKey/
+
+#school.system.address=Ethernet adapter Ethernet:
+school.system.address=Ethernet adapter Local Area Connection:
