changes for slide and profile and search

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -42,5 +42,5 @@ file.upload-dir=./uploads
 school.client.uri=http://35.225.43.18:8080/license/api/school/license/
 school.client.uri.license=http://35.225.43.18:8080/license/api/school/licenseKey/
 
-#school.system.address=Ethernet adapter Ethernet:
-school.system.address=Ethernet adapter Local Area Connection:
+school.system.address=Ethernet adapter Ethernet:
+#school.system.address=Ethernet adapter Local Area Connection:
