--- a/LICENSE_BUILDER/API/src/main/resources/application.properties
+++ b/LICENSE_BUILDER/API/src/main/resources/application.properties
@@ -37,7 +37,7 @@ school.jwtSecret=edusure
 school.jwtExpirationInMs=604800000
 #license.path=E:\\WORK_SPACE\\SCHOOL_CONTENT\\LICENSE_KEY\\license\\
 license.path=/home/rsa-key-20190515/edusure_key/
-
+school.key=7?jUQ_-U&U4na:yT
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
