--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #spring.profiles.active=dev
 server.port=8080
 #spring.datasource.url=jdbc:h2:file:~/h2/school_dev;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.url=jdbc:h2:file:~/h2/edusure_demo_v1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:~/h2/edusure;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.hibernate.ddl-auto = update
-#spring.h2.console.enabled=false
-#spring.h2.console.path=/h2-console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 
 #Thread Pool
