--- a/WEB/angular.json
+++ b/WEB/angular.json
@@ -30,7 +30,8 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": ["./node_modules/jspdf/dist/jspdf.min.js",
+"./node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"],
             "es5BrowserSupport": true
           },
           "configurations": {
