--- a/WEB/package.json
+++ b/WEB/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/elements": "^8.0.2",
     "@angular/forms": "~7.2.0",
     "@angular/material": "^7.3.1",
     "@angular/platform-browser": "~7.2.0",
@@ -24,6 +25,7 @@
     "angular2-image-upload": "^1.0.0-rc.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "jspdf-autotable": "^3.1.1",
     "ngx-bootstrap": "^3.2.0",
     "ngx-editor": "^4.1.0",
     "ngx-embed-video": "^1.0.4",
@@ -41,6 +43,7 @@
     "@types/core-js": "^2.5.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jspdf": "^1.3.0",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
