changes for  day zero duplicate and question support

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -39,8 +39,8 @@ spring.servlet.multipart.max-request-size=215MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=./uploads
-school.client.uri=http://35.225.43.18:8080/license/api/school/license/
-school.client.uri.license=http://35.225.43.18:8080/license/api/school/licenseKey/
+school.client.uri=http://35.192.1.24:8080/license/api/school/license/
+school.client.uri.license=http://35.192.1.24:8080/license/api/school/licenseKey/
 
-school.system.address=Ethernet adapter Ethernet:
-#school.system.address=Ethernet adapter Local Area Connection:
+#school.system.address=Ethernet adapter Ethernet:
+school.system.address=Ethernet adapter Local Area Connection:
