changes for license key with h2 db

--- a/LICENSE_BUILDER/API/pom.xml
+++ b/LICENSE_BUILDER/API/pom.xml
@@ -47,9 +47,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- DATA Base  -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 		</dependency>
 
 		<!-- For Working with Json Web Tokens (JWT) -->
