--- a/LICENSE_BUILDER/API/src/main/resources/application-dev.properties
+++ b/LICENSE_BUILDER/API/src/main/resources/application-dev.properties
@@ -1,3 +1,54 @@
-spring.datasource.url =jdbc:mysql://10.10.150.218:3306/license?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=admin@123
+#spring.profiles.active=dev
+server.port=8080
+spring.datasource.url = jdbc:mysql://35.239.173.138:3306/edusure_license?useSSL=false&serverTimezone=UTC
+#spring.datasource.url = jdbc:mysql://35.226.220.33:3306/eazdine_preprod?useSSL=false&serverTimezone=UTC
+#spring.datasource.url = jdbc:mysql://101.53.144.190:3306/wohooinc_eazdinetest?useSSL=false&serverTimezone=UTC
+#spring.datasource.url = jdbc:mysql://101.53.144.190:3306/wohooinc_eazdine_prod?useSSL=false
+#spring.datasource.username=wohooinc_eazdine
+#spring.datasource.password =1zBSoCAh*
+spring.datasource.username=edusure_license
+spring.datasource.password=Edusure@1234
+spring.datasource.platform=MyISAM
+spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+spring.jpa.hibernate.ddl-auto = update
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jackson.serialization.fail-on-empty-beans=false
+
+#Thread Pool
+school.threadpool.size=10
+spring.main.allow-bean-definition-overriding=true
+spring.jackson.serialization.fail-on-empty-beans=false
+
+
+server.contextPath=/license
+
+school.date.zoneid=UTC
+
+
+## School App Properties
+school.jwtSecret=edusure
+school.jwtExpirationInMs=604800000
+#license.path=E:\\WORK_SPACE\\SCHOOL_CONTENT\\LICENSE_KEY\\license\\
+license.path=/home/rsa-key-20190515/edusure_key/
+school.key=7?jUQ_-U&U4na:yT
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=./uploads
