--- a/LICENSE_BUILDER/API/src/main/resources/application.properties
+++ b/LICENSE_BUILDER/API/src/main/resources/application.properties
@@ -1,25 +1,13 @@
 #spring.profiles.active=dev
 server.port=8080
-spring.datasource.url = jdbc:mysql://35.239.173.138:3306/edusure_license?useSSL=false&serverTimezone=UTC
-#spring.datasource.url = jdbc:mysql://35.226.220.33:3306/eazdine_preprod?useSSL=false&serverTimezone=UTC
-#spring.datasource.url = jdbc:mysql://101.53.144.190:3306/wohooinc_eazdinetest?useSSL=false&serverTimezone=UTC
-#spring.datasource.url = jdbc:mysql://101.53.144.190:3306/wohooinc_eazdine_prod?useSSL=false
-#spring.datasource.username=wohooinc_eazdine
-#spring.datasource.password =1zBSoCAh*
-spring.datasource.username=edusure_license
-spring.datasource.password=Edusure@1234
-spring.datasource.platform=MyISAM
-spring.jpa.show-sql=true
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-# Keep the connection alive if idle for a long time (needed in production)
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+#spring.datasource.url=jdbc:h2:file:~/h2/school_dev;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:~/h2/license;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.hibernate.ddl-auto = update
-# Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-# Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jackson.serialization.fail-on-empty-beans=false
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 #Thread Pool
 school.threadpool.size=10
