changes for school adnd license key

--- a/LICENSE_BUILDER/API/src/main/resources/application.properties
+++ b/LICENSE_BUILDER/API/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.main.allow-bean-definition-overriding=true
 spring.jackson.serialization.fail-on-empty-beans=false
 
 
-server.contextPath=/license
+#server.contextPath=/license
 
 school.date.zoneid=UTC
 
@@ -23,8 +23,7 @@ school.date.zoneid=UTC
 ## School App Properties
 school.jwtSecret=edusure
 school.jwtExpirationInMs=604800000
-#license.path=E:\\WORK_SPACE\\SCHOOL_CONTENT\\LICENSE_KEY\\license\\
-license.path=/home/rsa-key-20190515/edusure_key/
+license.path=E:\\EduSure Setup_v1.0\\ALL_LICENSE_KEY
 school.key=7?jUQ_-U&U4na:yT
 
 ## MULTIPART (MultipartProperties)
