--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -24,7 +24,7 @@ schoool.version=001
 ## EazDineApp Properties
 school.jwtSecret=fdHe56#da15ertTTy
 school.jwtExpirationInMs=604800000
-
+school.key=7?jUQ_-U&U4na:yT
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
@@ -39,8 +39,6 @@ spring.servlet.multipart.max-request-size=215MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=./uploads
-school.client.uri=http://35.192.1.24:8080/license/api/school/license/
-school.client.uri.license=http://35.192.1.24:8080/license/api/school/licenseKey/
 
-#school.system.address=Ethernet adapter Ethernet:
-school.system.address=Ethernet adapter Local Area Connection:
+school.system.address=Ethernet adapter Ethernet:
+#school.system.address=Ethernet adapter Local Area Connection:
