--- a/LICENSE_BUILDER/API/pom.xml
+++ b/LICENSE_BUILDER/API/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>license</artifactId>
 	<version>0.0.1</version>
 	<!-- packaging>jar</packagin -->
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>license</name>
 
 	<description>LogicQ project for School License</description>
