changes for contet mgmnt

--- a/FILE_ENCRYPTION/pom.xml
+++ b/FILE_ENCRYPTION/pom.xml
@@ -55,7 +55,7 @@
 						<manifest>
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>com.logicq.encryption.VideoFileEncryption</mainClass>
+							<mainClass>com.logicq.encryption.FindLicenseKey</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
