--- a/WEB/angular.json
+++ b/WEB/angular.json
@@ -24,14 +24,30 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/ngx-extended-pdf-viewer/assets/locale",
+                "output": "/assets/locale/"
+              },
+              {
+                "glob": "**/*",
+                "input": "./node_modules/ngx-extended-pdf-viewer/assets/images",
+                "output": "/assets/images/"
+              },
+              { 
+                "glob": "pdf.worker.js", // or pdf.worker-es5.js to support IE11
+                "input": "./node_modules/ngx-extended-pdf-viewer/ngx-extended-pdf-viewer/assets", 
+                "output": "/assets/" 
+              }
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": ["./node_modules/jspdf/dist/jspdf.min.js",
-"./node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"],
+"./node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js","./node_modules/ngx-extended-pdf-viewer/assets/pdf.js",
+"./node_modules/ngx-extended-pdf-viewer/assets/viewer.js"],
             "es5BrowserSupport": true
           },
           "configurations": {
