--- a/WEB/package.json
+++ b/WEB/package.json
@@ -26,9 +26,11 @@
     "core-js": "^2.6.9",
     "hammerjs": "^2.0.8",
     "jspdf-autotable": "^3.2.4",
+    "ng2-pdf-viewer": "^6.0.0",
     "ngx-bootstrap": "^3.3.0",
     "ngx-editor": "^4.1.0",
     "ngx-embed-video": "^1.0.4",
+    "ngx-extended-pdf-viewer": "^1.6.0",
     "ngx-image-cropper": "^1.4.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.10.0",
