--- a/WEB/package.json
+++ b/WEB/package.json
@@ -25,9 +25,14 @@
     "angular2-image-upload": "^1.0.0-rc.2",
     "core-js": "^2.6.9",
     "hammerjs": "^2.0.8",
+    "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.2.4",
+    "mammoth": "^1.4.9",
+    "material-design-icons": "^3.0.1",
     "ng2-pdf-viewer": "^6.0.0",
     "ngx-bootstrap": "^3.3.0",
+    "ngx-doc-viewer": "^1.0.0",
+    "ngx-document-view": "^1.0.1",
     "ngx-editor": "^4.1.0",
     "ngx-embed-video": "^1.0.4",
     "ngx-extended-pdf-viewer": "^1.7.2",
